@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor STORAGE_COLOR
skinparam classBackgroundColor STORAGE_COLOR

package Storage as StoragePackage {

    package "UserPrefs Storage" #F4F6F6 {
        class "<<interface>>\nUserPrefsStorage" as UserPrefsStorage
        class JsonUserPrefsStorage
    }

    class "<<interface>>\nStorage" as Storage
    class StorageManager

    package "AddressBook Storage" #F4F6F6 {
        class "<<interface>>\nAddressBookStorage" as AddressBookStorage
        class JsonAddressBookStorage
        class JsonSerializableAddressBook

        class JsonAdaptedAssessment
        class JsonAdaptedGrade
        class JsonAdaptedCourse
        class JsonAdaptedStudent
    }
}

class HiddenOutside #FFFFFF
HiddenOutside ..> Storage

StorageManager .up.|> Storage
StorageManager -up-> "1" UserPrefsStorage
StorageManager -up-> "1" AddressBookStorage

Storage -left-|> UserPrefsStorage
Storage -right-|> AddressBookStorage

JsonUserPrefsStorage .up.|> UserPrefsStorage
JsonAddressBookStorage .up.|> AddressBookStorage

JsonAddressBookStorage ..> JsonSerializableAddressBook

JsonSerializableAddressBook --> "*" JsonAdaptedAssessment
JsonSerializableAddressBook --> "*" JsonAdaptedGrade
JsonSerializableAddressBook --> "*" JsonAdaptedCourse

JsonAdaptedCourse --> "*" JsonAdaptedStudent
@enduml
